Fixed content grid rows alignment

--- a/src/components/ContentPanel/ContentPanel.module.scss
+++ b/src/components/ContentPanel/ContentPanel.module.scss
@@ -2,20 +2,22 @@
 @use "../../globalMixins" as *;
 
 .container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  gap: 10px;
-  min-width: 100%;
-  min-height: max-content;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  width: 100%;
+  gap: 30px;
+
+  * {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
 
 .card {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   width: 250px;
   height: 250px;
   background-color: $foreground-rgb;
@@ -23,6 +25,7 @@
   color: $onForeground-rgb;
   user-select: none;
   padding: 10px 20px;
+  margin: auto;
   transition: all 0.15s ease 0s;
 
   .preview {
@@ -31,6 +34,11 @@
     height: 80%;
     margin: 8px;
     border-radius: $border-radius;
+  }
+
+  .title {
+    align-self: flex-start;
+    margin-left: 2px;
   }
 
   @include hover {
